Add catalog slug and params
