# backend/server/films.go
@@ -22,6 +22,9 @@ var defaultFilmsSort = analogdb.FilmSortAlphabetical
 // max limit of films or cameras returned
 var maxListLimit = 1000
 
+// max top posts attached to each film or camera
+var maxTopPosts = 10
+
 const (
 	filmsPath = "/films"
 	filmPath  = "/film"
@@ -51,6 +54,8 @@ func (s *Server) mountFilmHandlers(r chi.Router) {
 // @Param id query int false "Filter by specific film ID"
 // @Param include_counts query bool false "Include count data"
 // @Param exclude_zero_counts query bool false "Exclude zero counts"
+// @Param min_count query int false "Only return entries with at least this many posts, implies include_counts"
+// @Param top_posts query int false "Attach this many top scoring posts to each entry (1 to 10)"
 // @Success 200 {object} FilmsResponse
 // @Failure 400 {object} analogdb.Error "Invalid query parameters"
 // @Failure 500 {object} analogdb.Error "Internal server error"
@@ -79,7 +84,9 @@ func (s *Server) makeFilmResponse(r *http.Request, filter *analogdb.FilmFilter) 
 		return resp, err
 	}
 	for _, f := range films {
-		resp.Films = append(resp.Films, *f)
+		film := *f
+		film.Slug = analogdb.Slug(film.Make, film.Type)
+		resp.Films = append(resp.Films, film)
 	}
 	return resp, nil
 }
@@ -191,6 +198,25 @@ func parseToFilmFilter(r *http.Request) (*analogdb.FilmFilter, error) {
 			return nil, err
 		} else {
 			filter.ExcludeZeroCounts = &val
+		}
+	}
+
+	if minCount := values.Get("min_count"); minCount != "" {
+		if val, err := stringToInt(minCount); err != nil {
+			return nil, err
+		} else if val < 1 {
+			return nil, badRequest("invalid min_count parameter %d, must be at least 1", val)
+		} else {
+			filter.MinCount = &val
+		}
+	}
+
+	if topPosts := values.Get("top_posts"); topPosts != "" {
+		if val, err := stringToInt(topPosts); err != nil {
+			return nil, err
+		} else {
+			val = clampLimit(val, 1, 1, maxTopPosts)
+			filter.TopPosts = &val
 		}
 	}
 
